# boilerplate_fastapi

./: Makefile  README.md  app.db  main.py  pyproject.toml  requirements.dev.txt  requirements.txt
src/: main.py
src/api/application/use_cases/: create_post.py  create_user.py
src/api/application/use_cases/user/: create.py
src/api/domain/entities/: post.py  user.py
src/api/domain/repositories/: post.py  user.py
src/api/infrastructure/db/models/: post.py  user.py
src/api/infrastructure/db/sql/: session_sqlite.py
src/api/infrastructure/repositories/sql/: post_repository.py  user_repository.py
src/api/interface/controllers/: post_controller.py  user_controller.py
src/api/presentation/api/: user_routes.py
